some changes and addings

--- a/style.css
+++ b/style.css
@@ -144,9 +144,18 @@ footer {
 }
 
 .language-switcher button:hover {
-  background-color: #ffe0b2;
+  background-color: #e4d7c3;
 }
 
+.social {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+svg {
+    fill: blue;
+}
 
 /* ✅ Responsive Adjustments */
 @media (max-width: 600px) {
@@ -202,5 +211,15 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
+  }
+
+    .language-switcher {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .language-switcher button {
+    width: 100px;
+    justify-content: center;
   }
 }
