--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 header {
     display: flex;
     flex-direction: column;
-    text-align: center;
+    text-align:left;
     padding: 20px;
     border-bottom: 3px solid black;
     background-color: #f5f0e6;
@@ -46,8 +46,22 @@ header h1 {
 }
 
 main {
-    background-color: #097d4c;
+    display: flex;
+    flex-direction: row;
     color: #f1ead1;
+}
+
+.left-side {
+    justify-content: left;
+    width: 900px;
+}
+
+.right-side {
+    justify-content: right;
+}
+
+main img {
+    object-fit:contain;
 }
 
 main nav  {
@@ -84,14 +98,9 @@ main h2 {
     background-color: #763f21;
 }
 
-main h2::before {
+main [data-i18n="gallery"]::before {
     content: "🖼️ ";
     margin-right: 8px;
-}
-
-.about {
-    font-family: 'Lora', serif;
-    padding: 20px 50px;
 }
 
 h3 {
@@ -102,11 +111,6 @@ h3 {
 h4 {
     font-size: 1.5rem;
     padding-bottom: 20px;
-}
-
-.about p {
-    font-size: 1.4rem;
-    line-height: 25px;
 }
 
 footer {
