--- a/style.css
+++ b/style.css
@@ -149,7 +149,6 @@ svg {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    padding: 16px 0;
 }
 
 .main-right>nav {
@@ -161,6 +160,7 @@ svg {
 
 .main-right [aria-label="Primary"] {
     width: 100%;
+    height: 100vh;
     text-align: center;
 }
 
@@ -311,6 +311,12 @@ svg {
             border: 0;
         }
 
+        .main-right [aria-label="Primary"] {
+    height: fit-content;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
               /* Tighter list spacing */
         .main-right .primary-links {
             gap: 8px;
@@ -335,3 +341,7 @@ svg {
         }
 
     }
+
+    @media (max-width: 480px) {
+  .map-container { width: clamp(200px, 50vw, 320px); }
+}
